classDiagram
    class AudioManager {
        +static AudioManager Instance
        +void PlayBackgroundMusic()
        +void PlayShopBackgroundMusic()
        +void RestorePreviousBackgroundMusic()
        +void PlayCashRegisterSound()
        +void PlayBoardClearedSound()
        +void PlaySwapSound()
        +void PlayMatchSound()
        +void PlayOutOfMovesSound()
        +void PlayToolSound(int toolIndex)
    }

    class AnimationLooper {
        +void Update()
        +void AdvanceAnimationFrame()
    }

    class Board {
        +int levelMin
        +int movesRemaining
        +void GenerateBoard()
        +void ResetBoard()
        +void UpdateBoardSize(int level)
        +void ClearBoard()
        +bool IsToolUnlocked(int toolIndex)
        +void UnlockTool(int toolIndex)
        +void UnlockTileType(int tileIndex)
    }

    class GameManager {
        +static GameManager Instance
        +int itemsLeftToCollect
        +int coinsEarned
        +int level
        +int PlanetNumber
        +PlanetConfig[] planetConfigs
        +void NewGame()
        +void GoToNextPlanet()
        +void PurchasePlanet(int planetIndex)
        +void AddItemsCollected(HashSet<Tile> matchedTiles)
        +void LevelWon()
        +void OutOfMoves()
        +void UpdateBoardLevelAndGoals(int newLevel)
    }

    class PlanetConfig {
        +bool isLocked
        +int purchasePrice
        +Sprite BackgroundImage
        +Sprite CharacterSprite
    }

    class ShipMovement {
        +void MoveShipToX(float targetX, bool ShipFlyOrJump)
    }

    class UIManager {
        +void UpdateCollectionGoal(int itemsLeftToCollect)
        +void UpdateCoinsEarned(int coinsEarned)
        +void UpdateMoves(int movesRemaining)
        +void UpdatePlanet(int planetNumber)
        +void ShowBoardCleared()
        +void ShowOutOfMoves()
        +void PurchaseTile(int tileIndex)
        +void PurchaseTool(int toolIndex)
        +void PurchasePlanet(int planetIndex)
        +void ToggleCreditsPanel()
        +void TogglePlanetsPanel()
        +void ToggleToolsPanel()
        +void ToggleItemsPanel()
    }

    AudioManager --> GameManager
    GameManager --> Board
    GameManager --> PlanetConfig
    GameManager --> AudioManager
    GameManager --> UIManager
    GameManager --> ShipMovement
